test/spec/type.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/type.wast
;;; NOTE: Two tests don't pass because they use quoted modules with assert_invalid, which isn't currently supported by wabt.
(;; STDOUT ;;;
out/third_party/testsuite/type.wast:44: assert_malformed passed:
  out/third_party/testsuite/type/type.1.wast:1:27: syntax error, unexpected PARAM, expecting RESULT
  (type (func (result i32) (param i32)))
                            ^^^^^
out/third_party/testsuite/type.wast:48: assert_malformed passed:
  out/third_party/testsuite/type/type.2.wast:1:21: syntax error, unexpected VAR, expecting ) or VALUE_TYPE
  (type (func (result $x i32)))
                      ^^
out/third_party/testsuite/type.wast:52: expected module to be invalid: "out/third_party/testsuite/type/type.3.wast"
out/third_party/testsuite/type.wast:56: expected module to be invalid: "out/third_party/testsuite/type/type.4.wast"
2/4 tests passed.
;;; STDOUT ;;)
